header fixed; graph shouldn't overflow, but very small on windowed resolutions

--- a/homepage/static/homepage/details.css
+++ b/homepage/static/homepage/details.css
@@ -98,8 +98,9 @@ h2.card-title {
     overflow-y: scroll;
 }
 
-.card-body {
-    height: 375px;   
+.card-body-graph {
+    height: 375px; 
+    overflow-y: scroll;  
 }
 
 /* Padding adjustments for card content */
